Added perftest submodule
Added the submodule perftest from lsgunth that is a fork of the OFED
perftest suite with some donard specific edits. Useful for performance
testing of the RDMA aspects of the donard codebase.

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "io_peer_mem"]
 	path = io_peer_mem
 	url = https://github.com/sbates130272/io_peer_mem
+[submodule "perftest"]
+	path = perftest
+	url = https://github.com/lsgunth/perftest.git
