Added likwid as a submodule
Added the likwid tool as a submodule. We use this to measure CPU and
memory utilization in donard performance testing.

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "perftest"]
 	path = perftest
 	url = https://github.com/lsgunth/perftest.git
+[submodule "likwid"]
+	path = likwid
+	url = https://github.com/sbates130272/likwid.git
