Added mbw submodule
To assist in performance testing we add a fork of the mbw (memory
bandwidth tool). This tool can be used to monitor drops in bandwidth
between CPU cores and DRAM due to RDMA accesses (which do not pass
through CPU logic).

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "likwid"]
 	path = likwid
 	url = https://github.com/sbates130272/likwid.git
+[submodule "mbw"]
+	path = mbw
+	url = https://github.com/sbates130272/mbw.git
